Alterações e ícones em botões

--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
           <h3>Horário</h3>
           <div class="my-2"></div>
           <p class="text-justify">
-              <span class="badge badge-danger">Novo!</span>
-              A playlist que está ao vivo na rádio irá ficar selecionada, desde a sua hora de início até ao final da programação.
-            </p>
+            <span class="badge badge-danger">Novo!</span>
+            A playlist que está ao vivo na rádio irá ficar selecionada, desde a
+            sua hora de início até ao final da programação.
+          </p>
           <ul class="list-group">
             <li
               class="list-group-item d-flex justify-content-between align-items-center"
@@ -150,15 +151,19 @@
             Utilize este ficheiros para ouvir a Rádio Afonso Santos num
             reprodutor multimédia como o VLC, uma app móvel, etc.
           </p>
-          <a href="https://painel.radio-afonsosantos.tk/public/1/playlist/m3u">
-            <button type="button" class="btn btn-primary">
-              <i class="fas fa-download mr-1"></i> M3U
-            </button>
+          <a
+            class="btn btn-primary"
+            href="https://painel.radio-afonsosantos.tk/public/1/playlist/m3u"
+            role="button"
+          >
+            <i class="fas fa-download mr-1"></i> M3U
           </a>
-          <a href="https://painel.radio-afonsosantos.tk/public/1/playlist/pls">
-            <button type="button" class="btn btn-primary">
-              <i class="fas fa-download mr-1"></i> PLS
-            </button>
+          <a
+            class="btn btn-primary"
+            href="https://painel.radio-afonsosantos.tk/public/1/playlist/pls"
+            role="button"
+          >
+            <i class="fas fa-download mr-1"></i> PLS
           </a>
           <!-- PEDIDO DE MÚSICA -->
           <div class="my-4"></div>
@@ -232,7 +237,9 @@
                   required
                 ></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Enviar</button>
+              <button type="submit" class="btn btn-primary">
+                <i class="fas fa-paper-plane"></i> Enviar
+              </button>
             </form>
           </div>
           <!-- REDES SOCIAIS-->
