Pequena alteração na navbar e no texto "Novo!"

--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
         <img src="img/logotipo.png" width="64px" alt="Rádio Afonso Santos" />
         Rádio Afonso Santos
       </a>
-      <h5><span id="ouvintes" class="badge badge-dark"></span></h5>
+      <ul class="navbar-nav navbar-right">
+        <li class="nav-item">
+          <h5>
+            <span id="ouvintes" class="badge badge-dark"></span>
+          </h5>
+        </li>
+      </ul>
     </nav>
     <!-- A TOCAR -->
     <div class="jumbotron">
@@ -116,7 +122,7 @@
           <h3>Horário</h3>
           <div class="my-2"></div>
           <p class="text-justify">
-            <span class="badge badge-danger">Novo!</span>
+            <span class="badge badge-danger">Novo</span>
             A playlist que está ao vivo na rádio irá ficar selecionada, desde a
             sua hora de início até ao final da programação.
           </p>
@@ -169,7 +175,7 @@
           <div class="my-4"></div>
           <h3>Pedido de Música</h3>
           <p class="text-justify">
-            <span class="badge badge-danger">Novo!</span>
+            <span class="badge badge-danger">Novo</span>
             Clica no botão abaixo para pedir que uma música da nossa biblioteca
             seja reproduzida na Rádio Afonso Santos.
           </p>
