--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
           <!-- VAI TOCAR -->
           <!-- CAPA -->
-          <div class="col" id="vai-tocar-1">
+          <div class="col">
             <img
               src=""
               width="110px"
@@ -94,7 +94,7 @@
             />
           </div>
           <!-- METADADOS -->
-          <div class="col-4" id="vai-tocar-2">
+          <div class="col-4">
             <h4>
               <span class="badge badge-warning">Vai Tocar</span>
             </h4>
