Corrigidos alguns erros de escrita

--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
             funcionar. Hoje em dia, apesar de continuar a ser um hobby, a Rádio
             Afonso Santos já está online 24/7 com uma transmissão contínua da
             melhor música. Ocasionalmente, eventos ao vivo podem acontecer, por
-            isso fique atento so servidor Discord, no fundo da página.
+            isso fique atento ao servidor Discord, no fundo da página.
           </p>
           <h3>Horário</h3>
           <div class="my-2"></div>
           <p class="text-justify">
             <span class="badge badge-danger">Novo</span>
             A playlist que está ao vivo na rádio irá ficar selecionada, desde a
-            sua hora de início até ao final da programação.
+            sua hora de início até ao final da programação (não funciona quando um DJ está ao vivo).
           </p>
           <ul class="list-group">
             <li
