Alterado link da navbar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-dark bg-primary">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <img src="img/logotipo.png" width="64px" alt="Rádio Afonso Santos" />
         Rádio Afonso Santos
       </a>
