--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-dark bg-primary">
       <a class="navbar-brand" href="/">
         <img src="img/logotipo.png" width="64px" alt="Rádio Afonso Santos" />
-        Rádio Afonso Santos
+        <span class="d-none d-sm-inline">Rádio Afonso Santos</span>
       </a>
       <ul class="navbar-nav navbar-right">
         <li class="nav-item">
@@ -54,184 +54,177 @@
         <!-- LINHA -->
         <div class="row">
           <!-- CAPA -->
-          <div class="col">
-            <img src="" width="110px" id="imagem" class="rounded img-fluid" />
-          </div>
-          <!-- METADADOS-->
-          <div class="col-5">
-            <h4>
-              <!-- STATUS-->
-              <span id="status" class="status badge badge-danger"></span>
-            </h4>
-            <h5><span id="dj" class="badge badge-primary"></span></h5>
-            <h4 id="musica" class="font-weight-bold"></h4>
-            <h5 id="artista"></h5>
-            <!-- REPRODUTOR -->
-            <audio id="reprodutor" preload="none"></audio>
-            <!-- CONTROLOS REPRODUTOR -->
-            <div class="my-4"></div>
-            <button type="button" id="reproduzir" class="btn btn-transparent">
-              <i class="fas fa-play-circle fa-lg"></i>
-            </button>
-            <button type="button" id="parar" class="btn btn-transparent">
-              <i class="fas fa-pause-circle fa-lg"></i>
-            </button>
-            <input type="range" id="volume" min="0" max="1" step="0.1" value="0.2" />
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+            <div class="media">
+              <img src="" width="110px" id="imagem" class="mr-3 rounded align-self-start img-fluid" />
+              <!-- METADADOS-->
+              <div class="media-body">
+                <h4>
+                  <!-- STATUS-->
+                  <span id="status" class="status badge"></span>
+                </h4>
+                <h4 id="musica" class="font-weight-bold"></h4>
+                <h5 id="artista""></h5>
+              </div>
+            </div>
           </div>
           <!-- VAI TOCAR -->
           <!-- CAPA -->
-          <div class="col">
-            <img src="" width="110px" id="imagem-seguinte" class="rounded img-fluid" />
-          </div>
-          <!-- METADADOS -->
-          <div class="col-4">
-            <h4>
-              <span class="badge badge-warning">Vai Tocar</span>
-            </h4>
-            <h4 id="musica-seguinte" class="font-weight-bold"></h4>
-            <h5 id="artista-seguinte"></h5>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- SOBRE, FICHEIROS PLAYLIST E PEDIDO DE MUSICAS -->
-    <div class="container">
-      <div class="row">
-        <!-- SOBRE -->
-        <div class="col-md">
-          <h3>Sobre</h3>
-          <div class="my-2"></div>
-          <p class="text-justify">
-            A Rádio Afonso Santos surgiu em 2018, e começou com um hobby de um
-            jovem com gosto pela rádio e as tecnologias que fazem a rádio
-            funcionar. Hoje em dia, apesar de continuar a ser um hobby, a Rádio
-            Afonso Santos já está online 24/7 com uma transmissão contínua da
-            melhor música. Ocasionalmente, eventos ao vivo podem acontecer, por
-            isso fique atento ao servidor Discord, no fundo da página.
-          </p>
-          <h3>Horário</h3>
-          <div class="my-2"></div>
-          <p class="text-justify">
-            <span class="badge badge-danger">Novo</span>
-            A playlist que está ao vivo na rádio irá ficar selecionada, desde a
-            sua hora de início até ao final da programação (não funciona quando um DJ está ao vivo).
-          </p>
-          <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between align-items-center" id="playlist-variada">
-              Música Variada
-              <span class="badge badge-primary badge-pill">4h às 23h</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center" id="playlist-synthwave">
-              Synthwave
-              <span class="badge badge-primary badge-pill">23h às 4h</span>
-            </li>
-          </ul>
-          <div class="mb-2"></div>
-        </div>
-        <!-- FICHEIROS E PEDIDO DE MÚSICA -->
-        <div class="col-md">
-          <!-- FICHEIROS -->
-          <h3>Ficheiros Playlist</h3>
-          <div class="my-2"></div>
-          <h4>
-            Ficheiro <span class="badge badge-dark">M3U</span> &
-            <span class="badge badge-dark">PLS</span>
-          </h4>
-          <p class="text-justify">
-            Utilize este ficheiros para ouvir a Rádio Afonso Santos num
-            reprodutor multimédia como o VLC, uma app móvel, etc.
-          </p>
-          <a class="btn btn-primary" href="https://painel.radio-afonsosantos.tk/public/1/playlist/m3u" role="button">
-            <i class="fas fa-download mr-1"></i> M3U
-          </a>
-          <a class="btn btn-primary" href="https://painel.radio-afonsosantos.tk/public/1/playlist/pls" role="button">
-            <i class="fas fa-download mr-1"></i> PLS
-          </a>
-          <!-- PEDIDO DE MÚSICA -->
-          <div class="my-4"></div>
-          <h3>Pedido de Música</h3>
-          <p class="text-justify">
-            <span class="badge badge-danger">Novo</span>
-            Clica no botão abaixo para pedir que uma música da nossa biblioteca
-            seja reproduzida na Rádio Afonso Santos.
-          </p>
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#pedidos">
-            <i class="fas fa-external-link-square-alt"></i> Abrir Formulário
-          </button>
-        </div>
-      </div>
-    </div>
-    <!-- CONTATOS -->
-    <div class="my-4"></div>
-    <div class="jumbotron">
-      <div class="container">
-        <h3>Contatos</h3>
-        <p>
-          Utilize o formulário ou as redes sociais abaixo para contactar a Rádio
-          Afonso Santos, independentemente do assunto
-        </p>
-        <div class="row">
-          <!-- FORMULÁRIO CONTATO-->
-          <div class="p-4 col-md">
-            <form name="contatos" method="POST" data-netlify="true">
-              <div class="form-group">
-                <label>Nome</label>
-                <input type="text" class="form-control" name="nome" placeholder="O seu nome" required />
-              </div>
-              <div class="form-group">
-                <label>Email</label>
-                <input type="email" class="form-control" name="email" placeholder="O seu email" required />
-              </div>
-              <div class="form-group">
-                <label>Assunto</label>
-                <input type="text" class="form-control" name="assunto" placeholder="Sugestão, erro no website, ..." />
-              </div>
-              <div class="form-group">
-                <label>Mensagem</label>
-                <textarea class="form-control" name="mensagem" cols="30" rows="5" placeholder="A sua mensagem" required></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">
-                <i class="fas fa-paper-plane"></i> Enviar
-              </button>
-            </form>
-          </div>
-          <!-- REDES SOCIAIS-->
-          <div class="p-4 col-md">
-            <div class="mt-4"></div>
-            <!-- DISCORD -->
-            <div class="row">
-              <div class="col-auto">
-                <div class="text-center d-flex justify-content-center">
-                  <div class="card border-primary mb-3">
-                    <div class="card-header">
-                      <a href="https://discord.gg/dm8Ze7z" target="_blank">
-                        <i style="color: #ffffff;" class="fab fa-discord fa-4x"></i>
-                      </a>
+          <div class=" col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                  <div class="media">
+                    <img src="" width="110px" id="imagem-seguinte" class="mr-3 rounded align-self-start img-fluid" />
+                    <!-- METADADOS -->
+                    <div class="media-body">
+                      <h4>
+                        <span class="badge badge-warning">Vai Tocar</span>
+                      </h4>
+                      <h4 id="musica-seguinte" class="font-weight-bold"></h4>
+                      <h5 id="artista-seguinte"></h5>
                     </div>
-                    <div class="card-body">
-                      <p class="card-text">
-                        O nosso servidor Discord, onde poderá ouvir a nossa
-                        rádio e estar dentro de todas as notícias.
-                      </p>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- SOBRE, FICHEIROS PLAYLIST E PEDIDO DE MUSICAS -->
+      <div class="container">
+        <div class="row">
+          <!-- SOBRE -->
+          <div class="col-md">
+            <h3>Sobre</h3>
+            <div class="my-2"></div>
+            <p class="text-justify">
+              A Rádio Afonso Santos surgiu em 2018, e começou com um hobby de um
+              jovem com gosto pela rádio e as tecnologias que fazem a rádio
+              funcionar. Hoje em dia, apesar de continuar a ser um hobby, a Rádio
+              Afonso Santos já está online 24/7 com uma transmissão contínua da
+              melhor música. Ocasionalmente, eventos ao vivo podem acontecer, por
+              isso fique atento ao servidor Discord, no fundo da página.
+            </p>
+            <h3>Horário</h3>
+            <div class="my-2"></div>
+            <p class="text-justify">
+              <span class="badge badge-danger">Novo</span>
+              A playlist que está ao vivo na rádio irá ficar selecionada, desde a
+              sua hora de início até ao final da programação (não funciona quando um DJ está ao vivo).
+            </p>
+            <ul class="list-group mt-3 mb-3">
+              <li class="list-group-item d-flex justify-content-between align-items-center" id="playlist-variada">
+                Música Variada
+                <span class="badge badge-primary badge-pill">4h às 23h</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center" id="playlist-synthwave">
+                Synthwave
+                <span class="badge badge-primary badge-pill">23h às 4h</span>
+              </li>
+            </ul>
+          </div>
+          <!-- FICHEIROS E PEDIDO DE MÚSICA -->
+          <div class="col-md">
+            <!-- FICHEIROS -->
+            <h3>Ficheiros Playlist</h3>
+            <div class="my-2"></div>
+            <h4>
+              Ficheiro <span class="badge badge-dark">M3U</span> &
+              <span class="badge badge-dark">PLS</span>
+            </h4>
+            <p class="text-justify">
+              Utilize este ficheiros para ouvir a Rádio Afonso Santos num
+              reprodutor multimédia como o VLC, uma app móvel, etc.
+            </p>
+            <a class="btn btn-primary" href="https://painel.radio-afonsosantos.tk/public/1/playlist/m3u" role="button">
+              <i class="fas fa-download mr-1"></i> M3U
+            </a>
+            <a class="btn btn-primary" href="https://painel.radio-afonsosantos.tk/public/1/playlist/pls" role="button">
+              <i class="fas fa-download mr-1"></i> PLS
+            </a>
+            <!-- PEDIDO DE MÚSICA -->
+            <div class="my-4"></div>
+            <h3>Pedido de Música</h3>
+            <p class="text-justify">
+              <span class="badge badge-danger">Novo</span>
+              Clica no botão abaixo para pedir que uma música da nossa biblioteca
+              seja reproduzida na Rádio Afonso Santos.
+            </p>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#pedidos">
+              <i class="fas fa-external-link-square-alt"></i> Abrir Formulário
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- CONTATOS -->
+      <div class="my-4"></div>
+      <div class="jumbotron">
+        <div class="container">
+          <h3>Contatos</h3>
+          <p>
+            Utilize o formulário ou as redes sociais abaixo para contactar a Rádio
+            Afonso Santos, independentemente do assunto
+          </p>
+          <div class="row">
+            <!-- FORMULÁRIO CONTATO-->
+            <div class="p-4 col-md">
+              <form name="contatos" method="POST" data-netlify="true">
+                <div class="form-group">
+                  <label>Nome</label>
+                  <input type="text" class="form-control" name="nome" placeholder="O seu nome" required />
+                </div>
+                <div class="form-group">
+                  <label>Email</label>
+                  <input type="email" class="form-control" name="email" placeholder="O seu email" required />
+                </div>
+                <div class="form-group">
+                  <label>Assunto</label>
+                  <input type="text" class="form-control" name="assunto" placeholder="Sugestão, erro no website, ..." />
+                </div>
+                <div class="form-group">
+                  <label>Mensagem</label>
+                  <textarea class="form-control" name="mensagem" cols="30" rows="5" placeholder="A sua mensagem" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">
+                  <i class="fas fa-paper-plane"></i> Enviar
+                </button>
+              </form>
+            </div>
+            <!-- REDES SOCIAIS-->
+            <div class="p-4 col-md">
+              <div class="mt-4"></div>
+              <!-- DISCORD -->
+              <div class="row">
+                <div class="col-auto">
+                  <div class="text-center d-flex justify-content-center">
+                    <div class="card border-primary mb-3">
+                      <div class="card-header">
+                        <a href="https://discord.gg/dm8Ze7z" target="_blank">
+                          <i style="color: #ffffff;" class="fab fa-discord fa-4x"></i>
+                        </a>
+                      </div>
+                      <div class="card-body">
+                        <p class="card-text">
+                          O nosso servidor Discord, onde poderá ouvir a nossa
+                          rádio e estar dentro de todas as notícias.
+                        </p>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="mx-3"></div>
-              <!-- FACEBOOK -->
-              <div class="col-auto">
-                <div class="text-center d-flex justify-content-center">
-                  <div class="card border-primary mb-3">
-                    <div class="card-header">
-                      <a href="mailto:afonso@radio-afonsosantos.tk">
-                        <i style="color: #ffffff;" class="fas fa-envelope fa-4x"></i>
-                      </a>
-                    </div>
-                    <div class="card-body">
-                      <p class="card-text">
-                        O email alternativo ao formulário ao lado, caso prefira
-                        escrever um email.<br /><strong>afonso@radio-afonsosantos.tk</strong>
-                      </p>
+                <div class="mx-3"></div>
+                <!-- FACEBOOK -->
+                <div class="col-auto">
+                  <div class="text-center d-flex justify-content-center">
+                    <div class="card border-primary mb-3">
+                      <div class="card-header">
+                        <a href="mailto:afonso@radio-afonsosantos.tk">
+                          <i style="color: #ffffff;" class="fas fa-envelope fa-4x"></i>
+                        </a>
+                      </div>
+                      <div class="card-body">
+                        <p class="card-text">
+                          O email alternativo ao formulário ao lado, caso prefira
+                          escrever um email.<br /><strong>afonso@radio-afonsosantos.tk</strong>
+                        </p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -240,41 +233,40 @@
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- FOOTER -->
-    <footer class="footer mb-4">
-      <div class="container">
-        <span class="text-muted"><small>&copy; 2019 - RÁDIO AFONSO SANTOS</small></span>
-      </div>
-    </footer>
+      <!-- FOOTER -->
+      <footer class="footer mb-4">
+        <div class="container">
+          <span class="text-muted"><small>&copy; 2019 - RÁDIO AFONSO SANTOS</small></span>
+        </div>
+      </footer>
 
-    <!-- SCRIPTS -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/NchanSubscriber.js"></script>
-    <script src="js/nowplaying.js"></script>
-    <script src="js/player.js"></script>
+      <!-- SCRIPTS -->
+      <script src="js/jquery.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/NchanSubscriber.js"></script>
+      <script src="js/nowplaying.js"></script>
+      <script src="js/player.js"></script>
 
-    <!-- POPUP DO PEDIDOS DE MÚSICAS -->
-    <div class="modal fade" id="pedidos">
-      <div class="modal-dialog modal-xl">
-        <div class="modal-content">
-          <!-- CABEÇALHO -->
-          <div class="modal-header">
-            <h4 class="modal-title">Pedido de Música</h4>
-            <button type="button" class="close" data-dismiss="modal">
-              &times;
-            </button>
-          </div>
-          <!-- CORPO -->
-          <div class="modal-body">
-            <iframe src="https://painel.radio-afonsosantos.tk/public/radioafonsosantos/embed-requests" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 906px; border: 0;">
-            </iframe>
+      <!-- POPUP DO PEDIDOS DE MÚSICAS -->
+      <div class="modal fade" id="pedidos">
+        <div class="modal-dialog modal-xl">
+          <div class="modal-content">
+            <!-- CABEÇALHO -->
+            <div class="modal-header">
+              <h4 class="modal-title">Pedido de Música</h4>
+              <button type="button" class="close" data-dismiss="modal">
+                &times;
+              </button>
+            </div>
+            <!-- CORPO -->
+            <div class="modal-body">
+              <iframe src="https://painel.radio-afonsosantos.tk/public/radioafonsosantos/embed-requests" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 906px; border: 0;">
+              </iframe>
+            </div>
           </div>
         </div>
       </div>
-    </div>
   </body>
 
 </html>
