Removido URL do convite do servidor Discord

--- a/index.html
+++ b/index.html
@@ -228,10 +228,7 @@
                       <div class="card-body">
                         <p class="card-text">
                           O nosso servidor Discord, onde poderá ouvir a nossa
-                          rádio e estar dentro de todas as notícias. <br />
-                          <span class="font-weight-bold"
-                            >https://discord.gg/dm8Ze7z</span
-                          >
+                          rádio e estar dentro de todas as notícias.
                         </p>
                       </div>
                       <!-- redes sociais / discord / card / body -->
