--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </form>
           </div>
           <!-- TODO -->
-          <!-- REDES SOCIAIS-->
+          <!-- DISCORD E EMAIL-->
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
             <div class="card-group mt-4">
               <div class="row">
@@ -239,7 +239,7 @@
                 </div>
                 <!-- redes sociais / discord / col -->
 
-                <!-- FACEBOOK -->
+                <!-- EMAIL -->
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
                   <div class="text-center d-flex justify-content-center">
                     <div class="card border-primary mb-3">
@@ -251,7 +251,7 @@
                           ></i>
                         </a>
                       </div>
-                      <!-- facebook / col / text-center / card / card-header -->
+                      <!-- email / col / text-center / card / card-header -->
                       <div class="card-body">
                         <p class="card-text">
                           O email alternativo ao formulário ao lado, caso
@@ -261,13 +261,13 @@
                           >
                         </p>
                       </div>
-                      <!-- redes socias / facebook / card / card-body -->
+                      <!-- redes socias / email / card / card-body -->
                     </div>
-                    <!-- redes socias / facebook / card -->
+                    <!-- redes socias / email / card -->
                   </div>
-                  <!-- redes socias / facebook / text-center -->
+                  <!-- redes socias / email / text-center -->
                 </div>
-                <!-- redes socias / facebook / col-->
+                <!-- redes socias / email / col-->
               </div>
               <!-- redes sociais / row -->
             </div>
@@ -284,9 +284,10 @@
     <!-- FOOTER -->
     <footer class="footer mb-4">
       <div class="container">
-        <span class="text-muted"
-          ><small>&copy; 2019 - RÁDIO AFONSO SANTOS</small></span
-        >
+        <span class="small text-muted">
+          Made with <i class="fas fa-heart"></i> by
+          <a href="http://afonsosantos.x10.mx" target="_blank">Afonso Santos</a>
+        </span>
       </div>
       <!-- footer / container -->
     </footer>
