--- a/index.html
+++ b/index.html
@@ -51,14 +51,16 @@
         </li>
       </ul>
     </nav>
-    <!-- A TOCAR -->
+    <!-- navbar -->
+    <!-- INFORMAÇÕES DA TRANSMISSÃO -->
     <div class="jumbotron">
       <div class="container">
         <!-- LINHA -->
         <div class="row">
-          <!-- CAPA -->
+          <!-- A TOCAR -->
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
             <div class="media">
+              <!-- CAPA -->
               <div class="overlay">
                 <img
                   src=""
@@ -78,7 +80,9 @@
                 <h5 id="artista"></h5>
               </div>
             </div>
+            <!-- informações da transmissão / jumbotron / container / row / col / media -->
           </div>
+          <!-- informações da transmissão / jumbotron / container / row / col -->
           <!-- VAI TOCAR -->
           <!-- CAPA -->
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
@@ -98,11 +102,16 @@
                 <h5 id="artista-seguinte"></h5>
               </div>
             </div>
+            <!-- vai tocar / jumbotron / container / row / col / media -->
           </div>
+          <!-- vai tocar / jumbotron / container / row / col -->
         </div>
+        <!-- informações da transmissão / jumbotron / container / row -->
       </div>
+      <!-- informações da transmissão / jumbotron / container -->
     </div>
-    <!-- HORÁRIO E PEDIDO DE MÚSICAS -->
+    <!-- informações da transmissão / jumbotron -->
+    <!-- HORÁRIO E PEDIDO DE MÚSICA -->
     <div class="container">
       <div class="row mb-5">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
@@ -129,7 +138,9 @@
               <span class="badge badge-primary badge-pill">23h às 4h</span>
             </li>
           </ul>
+          <!-- horários e pedido de musica / container / row / col / list-group -->
         </div>
+        <!-- horários e pedido de musica / container / row / col -->
         <!-- PEDIDO DE MÚSICA -->
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
           <h3>Pedido de Música</h3>
@@ -148,9 +159,12 @@
             <i class="fas fa-external-link-square-alt"></i> Abrir Formulário
           </button>
         </div>
+        <!-- horários e pedido de musica / container / row / col -->
       </div>
+      <!-- horários e pedido de musica / container / row -->
     </div>
-    <!-- CONTATOS -->
+    <!-- horários e pedido de musica / container-->
+    <!-- CONTATOS & REDES SOCIAIS -->
     <div class="jumbotron">
       <div class="container">
         <h3>Contatos</h3>
@@ -206,8 +220,9 @@
                 <i class="fas fa-paper-plane"></i> Enviar
               </button>
             </form>
+            <!-- formulário de contato / col / form -->
           </div>
-          <!-- TODO -->
+          <!-- formulário de contato / col -->
           <!-- DISCORD E EMAIL-->
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
             <div class="card-group mt-4">
@@ -275,7 +290,7 @@
           </div>
           <!-- redes sociais / col -->
         </div>
-        <!-- redes socias / row -->
+        <!-- contatos & redes socias / row -->
       </div>
       <!-- contatos / container -->
     </div>
