Atualizada hora das listas de reprodução

--- a/index.html
+++ b/index.html
@@ -62,12 +62,7 @@
             <div class="media">
               <!-- CAPA -->
               <div class="overlay">
-                <img
-                  src=""
-                  width="110px"
-                  id="imagem"
-                  class="mr-3 rounded align-self-start img-fluid"
-                />
+                <img src="" width="110px" id="imagem" class="mr-3 rounded align-self-start img-fluid" />
                 <i id="icone" style="cursor: pointer; " class="fas fa-3x"></i>
               </div>
               <!-- METADADOS-->
@@ -87,12 +82,7 @@
           <!-- CAPA -->
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
             <div class="media">
-              <img
-                src=""
-                width="110px"
-                id="imagem-seguinte"
-                class="mr-3 rounded align-self-start img-fluid"
-              />
+              <img src="" width="110px" id="imagem-seguinte" class="mr-3 rounded align-self-start img-fluid" />
               <!-- METADADOS -->
               <div class="media-body">
                 <h4>
@@ -118,24 +108,17 @@
           <h3>Horário</h3>
           <p class="text-justify">
             <span class="badge badge-danger mr-1">Novo</span>
-            A playlist que está ao vivo na rádio irá ficar selecionada, desde a
-            sua hora de início até ao final da programação (não funciona quando
-            um DJ está ao vivo).
+            A playlist que está ao vivo na rádio irá ficar selecionada, desde a sua hora de início até ao final da programação (não funciona quando um DJ está
+            ao vivo).
           </p>
           <ul class="list-group mt-3 mb-3">
-            <li
-              class="list-group-item d-flex justify-content-between align-items-center py-1"
-              id="playlist-variada"
-            >
+            <li class="list-group-item d-flex justify-content-between align-items-center py-1" id="playlist-variada">
               Música Variada
-              <span class="badge badge-primary badge-pill">4h às 23h</span>
+              <span class="badge badge-primary badge-pill">7h às 23h</span>
             </li>
-            <li
-              class="list-group-item d-flex justify-content-between align-items-center py-1"
-              id="playlist-synthwave"
-            >
+            <li class="list-group-item d-flex justify-content-between align-items-center py-1" id="playlist-synthwave">
               Synthwave
-              <span class="badge badge-primary badge-pill">23h às 4h</span>
+              <span class="badge badge-primary badge-pill">23h às 7h</span>
             </li>
           </ul>
           <!-- horários e pedido de musica / container / row / col / list-group -->
@@ -146,16 +129,9 @@
           <h3>Pedido de Música</h3>
           <p class="text-justify">
             <span class="badge badge-danger mr-1">Novo</span>
-            Clica no botão abaixo para pedir que uma música da nossa biblioteca
-            seja reproduzida (estes pedidos demoram até 5 minutos a serem
-            reproduzidos).
+            Clica no botão abaixo para pedir que uma música da nossa biblioteca seja reproduzida (estes pedidos demoram até 5 minutos a serem reproduzidos).
           </p>
-          <button
-            type="button"
-            class="btn btn-primary btn-sm btn-block"
-            data-toggle="modal"
-            data-target="#pedidos"
-          >
+          <button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="modal" data-target="#pedidos">
             <i class="fas fa-external-link-square-alt"></i> Abrir Formulário
           </button>
         </div>
@@ -169,8 +145,7 @@
       <div class="container">
         <h3>Contatos</h3>
         <p class="text-justify">
-          Utilize o formulário ou as redes sociais abaixo para contactar a Rádio
-          Afonso Santos, independentemente do assunto
+          Utilize o formulário ou as redes sociais abaixo para contactar a Rádio Afonso Santos, independentemente do assunto
         </p>
         <div class="row">
           <!-- FORMULÁRIO CONTATO-->
@@ -178,47 +153,21 @@
             <form name="contatos" method="POST" data-netlify="true">
               <div class="form-group">
                 <label>Nome</label>
-                <input
-                  type="text"
-                  class="form-control form-control-sm"
-                  name="nome"
-                  placeholder="O seu nome"
-                  required
-                />
+                <input type="text" class="form-control form-control-sm" name="nome" placeholder="O seu nome" required />
               </div>
               <div class="form-group">
                 <label>Email</label>
-                <input
-                  type="email"
-                  class="form-control form-control-sm"
-                  name="email"
-                  placeholder="O seu email"
-                  required
-                />
+                <input type="email" class="form-control form-control-sm" name="email" placeholder="O seu email" required />
               </div>
               <div class="form-group">
                 <label>Assunto</label>
-                <input
-                  type="text"
-                  class="form-control form-control-sm"
-                  name="assunto"
-                  placeholder="Sugestão, erro no website, ..."
-                />
+                <input type="text" class="form-control form-control-sm" name="assunto" placeholder="Sugestão, erro no website, ..." />
               </div>
               <div class="form-group">
                 <label>Mensagem</label>
-                <textarea
-                  class="form-control"
-                  name="mensagem"
-                  cols="30"
-                  rows="3"
-                  placeholder="A sua mensagem"
-                  required
-                ></textarea>
+                <textarea class="form-control" name="mensagem" cols="30" rows="3" placeholder="A sua mensagem" required></textarea>
               </div>
-              <button type="submit" class="btn btn-primary btn-sm btn-block">
-                <i class="fas fa-paper-plane"></i> Enviar
-              </button>
+              <button type="submit" class="btn btn-primary btn-sm btn-block"><i class="fas fa-paper-plane"></i> Enviar</button>
             </form>
             <!-- formulário de contato / col / form -->
           </div>
@@ -233,17 +182,13 @@
                     <div class="card border-primary mb-3">
                       <div class="card-header">
                         <a href="https://discord.gg/dm8Ze7z" target="_blank">
-                          <i
-                            style="color: #ffffff;"
-                            class="fab fa-discord fa-3x"
-                          ></i>
+                          <i style="color: #ffffff;" class="fab fa-discord fa-3x"></i>
                         </a>
                       </div>
                       <!-- discord / col / text-center / card / card-header -->
                       <div class="card-body">
                         <p class="card-text">
-                          O nosso servidor Discord, onde poderá ouvir a nossa
-                          rádio e estar dentro de todas as notícias.
+                          O nosso servidor Discord, onde poderá ouvir a nossa rádio e estar dentro de todas as notícias.
                         </p>
                       </div>
                       <!-- redes sociais / discord / card / body -->
@@ -260,20 +205,14 @@
                     <div class="card border-primary mb-3">
                       <div class="card-header">
                         <a href="mailto:afonso@radio-afonsosantos.tk">
-                          <i
-                            style="color: #ffffff;"
-                            class="fas fa-envelope fa-3x"
-                          ></i>
+                          <i style="color: #ffffff;" class="fas fa-envelope fa-3x"></i>
                         </a>
                       </div>
                       <!-- email / col / text-center / card / card-header -->
                       <div class="card-body">
                         <p class="card-text">
-                          O email alternativo ao formulário ao lado, caso
-                          prefira escrever um email.<br />
-                          <span class="font-weight-bold"
-                            >afonso@radio-afonsosantos.tk</span
-                          >
+                          O email alternativo ao formulário ao lado, caso prefira escrever um email.<br />
+                          <span class="font-weight-bold">afonso@radio-afonsosantos.tk</span>
                         </p>
                       </div>
                       <!-- redes socias / email / card / card-body -->
