Adicionada mensagem na secção Pedido de Música

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
           <h3>Pedido de Música</h3>
           <p class="text-justify">
             <span class="badge badge-danger mr-1">Novo</span>
-            Clica no botão abaixo para pedir que uma música da nossa biblioteca seja reproduzida (estes pedidos demoram até 5 minutos a serem reproduzidos).
+            Clica no botão abaixo para pedir que uma música da nossa biblioteca seja reproduzida (estes pedidos demoram até 5 minutos a serem reproduzidos, e
+            apenas as músicas da lista reprodução <span class="font-weight-bold">Variadas</span> estão disponíveis para pedir).
           </p>
           <button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="modal" data-target="#pedidos">
             <i class="fas fa-external-link-square-alt"></i> Abrir Formulário
