Adicionada cor no Google Chrome, em dispositivos Android

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" href="favicon.png" />
+    <meta name="theme-color" content="#375a7f" />
 
-    <!-- ESTILOS E FONTE AWESOME -->
+    <!-- ESTILOS E FONT AWESOME -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="vendor/font-awesome/css/all.css" />
